@@ -6,24 +6,14 @@ WORKDIR /app
 ENV DEBIAN_FRONTEND=noninteractive
 # Configure default locale (important for chrome-headless-shell). 
 ENV LANG en_US.UTF-8
-RUN apt-get -y update && apt-get install -y nodejs npm wget gnupg software-properties-common protobuf-compiler apt-transport-https
+RUN apt-get update && apt-get install -y nodejs npm wget gnupg software-properties-common protobuf-compiler apt-transport-https chromium
 
 # setup temurin java
-RUN wget -qO - https://packages.adoptium.net/artifactory/api/gpg/key/public | gpg --dearmor | tee /etc/apt/trusted.gpg.d/adoptium.gpg > /dev/null \
-  && echo "deb https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list \
-  && apt update \
-  && apt install -y temurin-11-jdk
-
-# Install latest chrome dev package and fonts to support major charsets (Chinese, Japanese, Arabic, Hebrew, Thai and a few others)
-# Note: this installs the necessary libs to make the bundled version of Chromium that Puppeteer
-# installs, work.
-RUN apt-get update \
-  && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
-  && sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] https://dl-ssl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
+RUN mkdir -p /etc/apt/keyrings \
+  && wget -O - wget -O - https://packages.adoptium.net/artifactory/api/gpg/key/public | tee /etc/apt/keyrings/adoptium.asc \
+  && echo "deb [signed-by=/etc/apt/keyrings/adoptium.asc] https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list \
   && apt-get update \
-  && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-khmeros fonts-kacst fonts-freefont-ttf libxss1 dbus dbus-x11 \
-  --no-install-recommends \
-  && rm -rf /var/lib/apt/lists/*
+  && apt-get -y install temurin-8-jdk
 
 # install ant
 # ant version
@@ -41,14 +31,20 @@ RUN ln -s /usr/local/apache-ant-${ANT_VERSION}/bin/ant /usr/bin/ant
 RUN pip install --upgrade pip
 RUN pip install protobuf
 
+RUN  groupadd -r pptruser && useradd -rm -g pptruser -G audio,video pptruser
+
 # set ant home
 ENV ANT_HOME /usr/local/apache-ant-${ANT_VERSION}
-ENV JAVA_HOME /usr/lib/jvm/temurin-11-jdk-amd64
+ENV PUPPETEER_EXECUTABLE_PATH /usr/bin/chromium
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
 WORKDIR /app
 COPY . /app/
-ENV ANT_OPTS="-Xmx256m -Dfile.encoding=UTF-8 -XX:+UnlockExperimentalVMOptions -XX:-UseG1GC -XX:+UseZGC"
-RUN ant package
+RUN ant extractjs
+
+# chown
+RUN chown -R pptruser:pptruser /app
+USER pptruser
 
 WORKDIR /app/example
 RUN npm install
